--- a/.tekton/cluster-image-set-controller-pbpe-push.yaml
+++ b/.tekton/cluster-image-set-controller-pbpe-push.yaml
@@ -2,6 +2,7 @@ apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
   annotations:
+    build.appstudio.openshift.io/repo: https://github.com/stolostron/cluster-image-set-controller?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
@@ -13,7 +14,7 @@ metadata:
     appstudio.openshift.io/component: cluster-image-set-controller-pbpe
     pipelines.appstudio.openshift.io/type: build
   name: cluster-image-set-controller-pbpe-on-push
-  namespace: red-hat-acm-tenant
+  namespace: crt-redhat-acm-tenant
 spec:
   params:
   - name: dockerfile
@@ -21,7 +22,7 @@ spec:
   - name: git-url
     value: '{{repo_url}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/red-hat-acm-tenant/mce-24/cluster-image-set-controller-pbpe:{{revision}}
+    value: quay.io/redhat-user-workloads/crt-redhat-acm-tenant/mce-24/cluster-image-set-controller-pbpe:{{revision}}
   - name: path-context
     value: .
   - name: revision
