--- a/.tekton/cluster-image-set-controller-mce-28-push.yaml
+++ b/.tekton/cluster-image-set-controller-mce-28-push.yaml
@@ -32,6 +32,10 @@ spec:
     value: .
   - name: hermetic
     value: "true"
+  - name: prefetch-input
+    value:
+    - path: .
+      type: gomod
   pipelineSpec:
     description: |
       This pipeline is ideal for building multi-arch container images from a Containerfile while maintaining trust after pipeline customization.
